kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app
  namespace: example-app
  labels:
    app.kubernetes.io/name: example-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: example-app
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
